# WrightEagle.AI-RobocupATHome

manipulation/client/: get_image.py  robot_mover.py  slow.py  smooth_move.py  socket_client.py  (+1 more)
nav_launch/: package.xml
navigation/jh_localization/: CMakeLists.txt  package.xml
navigation/jh_localization/config/: localization.yaml
navigation/jh_localization/include/jh_localization/: common.h
navigation/jh_localization/launch/: localization.launch  localization_realtime.launch
navigation/jh_localization/rviz/: local_uwb.rviz  localization.rviz
navigation/jh_localization/src/: lidarOptimization.cpp  localization.cpp
speech/: .gitignore  1-silero_vad_whisper.py  2-TTS-v3.py  README.md  README_Robocup.md  opencv_test.py
ultralytics-main/: cabinet_goal.py  frames.gv  how to publish the position of a person.txt  how to publish the position of an object.txt  how to run navigation and tracking.txt  object_2d_to_3d.py  object_apple.py  object_move.py  object_move2.py  object_move3.py  person_follower.py  person_follower2.py  person_follower3.py  person_follower_copy.py  pointcloud.py  realsense_found.py  realsense_found3d.py  rotate.py  rotate3.py  start.launch  start_tracking.py  start_tracking_3Dpoint.py  start_tracking_3Dpointv2.py  start_tracking_3Dpointv3.py  start_tracking_3Dpointv4.py  start_tracking_3Dpointv5.py  start_tracking_base.py  start_tracking_base2.py  start_tracking_base_modify.py  start_tracking_gpu.py  start_tracking_gpuv2.py  start_tracking_original  start_tracking_point.py  yolo_person_follower.py  yolo_person_follower_r.py  yolo_seg_infer.py
(+56 files in other folders)
